# cargo-pak

./: .gitignore  Cargo.toml  README.md  example.pack.toml  rein.sh
src/: dep_check.rs  flatpak.rs  main.rs  shell.rs
src/data/: cargo.rs  desktop.rs  mod.rs  toml.rs  yaml.rs
