[package]
name = "cargo-pak"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/toastxc/cargo-pack"
description = "Generate manifest and desktop files for flatpak"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
toml = "0.8.14"
anyhow = "1.0.86"